--- a/MeetUP/FrontEnd/index.html
+++ b/MeetUP/FrontEnd/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon"  href="/logo3.png" />
-    <link href="./output.css" rel="stylesheet" />
+    <link href="./index.css" rel="stylesheet" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MeetUP</title>
